# audiothek-feed

./: .gitignore  Cargo.toml  LICENSE  Readme.adoc  flake.nix  index.html  metadata_query.graphql  query.graphql  schema.graphql
.github/workflows/: build-image.yml  release.yml
frontend/: feed_info_error.html  feed_info_view.html  index.html  package-lock.json  package.json  tailwind.config.js
frontend/modules/audiothek-feed/: default.nix
modules/audiothek-feed/: default.nix
src/: audiothek.rs  lib.rs  main.rs
templates/: feed_info_view.html
