[package]
name = "audiothek-rss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
atom_syndication = "0.12.1"
axum = { version = "0.6.19", features = ["macros"] }
chrono = "0.4.26"
graphql_client = "0.13.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
simple_logger = "4.2.0"
tera = "1.19.0"
tokio = { version = "1.29.1", features = ["full"] }
